--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,16 @@
 buildscript {
-    ext.kotlin_version = '1.9.22'
+    // ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.8.21'
     repositories {
         google()
         mavenCentral()
     }
 
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // Add the Google Services plugin dependency below
-        classpath 'com.google.gms:google-services:4.4.1'
-    }
+  dependencies {
+  classpath 'com.android.tools.build:gradle:7.3.1'
+  classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  classpath 'com.google.gms:google-services:4.3.15'
+}
 }
 
 allprojects {
