--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_fonts: ^6.1.0
   cloud_firestore: ^4.15.5
   flutter_svg: ^2.0.10+1
+  flutter_facebook_auth: ^6.1.1
 
 dev_dependencies:
   flutter_test:
