--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   cloud_firestore: ^4.15.5
   flutter_svg: ^2.0.10+1
   flutter_facebook_auth: ^6.1.1
+  image_picker: ^1.0.7
+  firebase_storage: ^11.6.8
 
 dev_dependencies:
   flutter_test:
