--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.17.5
   firebase_messaging: ^14.7.16
   google_sign_in: ^6.2.1
+  lottie: ^3.1.0
   get: ^4.6.6
   google_fonts: ^6.1.0
   cloud_firestore: ^4.15.5
@@ -71,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/json/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
