--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_facebook_auth: ^6.1.1
   image_picker: ^1.0.7
   firebase_storage: ^11.6.8
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,8 @@ flutter:
   assets:
     - assets/images/
     - assets/json/
+    - assets/svgs/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
